<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_title_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story_app"
        android:textSize="24sp"
        android:textColor="#2196F3"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/form_container"/>

    <LinearLayout
        android:id="@+id/form_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textSize="20sp"
            android:textColor="#2196F3"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tv_login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:textSize="14sp"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="" />

        <EditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_marginBottom="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <id.pemudakreatif.storyapp_pandupratama.customview.CustomPasswordEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kata_sandi"
                android:inputType="textPassword"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="#9E9E9E" />

            <id.pemudakreatif.storyapp_pandupratama.customview.EyeIconView
                android:id="@+id/eye_icon"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

<!--        <TextView-->
<!--            android:id="@+id/tv_password_error"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="#FF0000"-->
<!--            android:textSize="12sp"-->
<!--            android:visibility="gone"-->
<!--            android:layout_marginBottom="8dp"/>-->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/belum_memiliki_akun_daftar"
            android:textColor="#2196F3"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
