<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".AddStoryActivity">

    <TextView
        android:id="@+id/tv_title_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_cerita"
        android:textSize="24sp"
        android:textColor="#2196F3"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/form_container"/>

    <LinearLayout
        android:id="@+id/form_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        android:gravity="center"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/button_select_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih_foto"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/iv_selected_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deskripsi_cerita"
            android:inputType="textMultiLine"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambah_cerita"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
